@@ -1527,6 +1527,8 @@ CRenderedTextSubtitle::CRenderedTextSubtitle(CCritSec* pLock, STSStyle* styleOve
     : CSubPicProviderImpl(pLock)
     , m_doOverrideStyle(doOverride)
     , m_pStyleOverride(styleOverride)
+    , m_bOverridePlacement(false)
+    , m_overridePlacement(50, 90)
     , m_time(0)
     , m_delay(0)
     , m_animStart(0)
@@ -2638,7 +2640,16 @@ CSubtitle* CRenderedTextSubtitle::GetSubtitle(int entry)
     } else {
         // find the appropriate embedded style
         GetStyle(entry, stss);
+        if (m_bOverridePlacement) {
+            // Apply override placement to embedded style
+            stss.scrAlignment = 2;
+            LONG mw = m_dstScreenSize.cx - stss.marginRect.left - stss.marginRect.right;
+            stss.marginRect.bottom = std::lround(m_dstScreenSize.cy - m_dstScreenSize.cy * m_overridePlacement.cy / 100.0);
+            stss.marginRect.left   = std::lround(m_dstScreenSize.cx * m_overridePlacement.cx / 100.0 - mw / 2.0);
+            stss.marginRect.right  = m_dstScreenSize.cx - (stss.marginRect.left + mw);
+        }
     }
+
     if (m_ePARCompensationType == EPCTUpscale) {
         if (stss.fontScaleX / stss.fontScaleY == 1.0 && m_dPARCompensation != 1.0) {
             if (m_dPARCompensation < 1.0) {
