@@ -13416,7 +13416,7 @@ bool CMainFrame::LoadSubtitle(CString fn, SubtitleInput* pSubInput /*= nullptr*/
 }
 
 // Called from GraphThread
-bool CMainFrame::SetSubtitle(int i, bool bIsOffset /*= false*/, bool bDisplayMessage /*= false*/, bool bApplyDefStyle /*= false*/)
+bool CMainFrame::SetSubtitle(int i, bool bIsOffset /*= false*/, bool bDisplayMessage /*= false*/)
 {
     if (!m_pCAP) {
         return false;
@@ -13443,7 +13443,7 @@ bool CMainFrame::SetSubtitle(int i, bool bIsOffset /*= false*/, bool bDisplayMes
             // m_csSubLock shouldn't be locked when using IAMStreamSelect::Enable
             CAutoLock cAutoLock(&m_csSubLock);
             pSubInput->pSubStream->SetStream(i);
-            SetSubtitle(*pSubInput, bApplyDefStyle);
+            SetSubtitle(*pSubInput);
         }
 
         if (bDisplayMessage) {
@@ -13463,7 +13463,7 @@ bool CMainFrame::SetSubtitle(int i, bool bIsOffset /*= false*/, bool bDisplayMes
     return success;
 }
 
-void CMainFrame::SetSubtitle(const SubtitleInput& subInput, bool bApplyDefStyle /*= false*/)
+void CMainFrame::SetSubtitle(const SubtitleInput& subInput)
 {
     CAppSettings& s = AfxGetAppSettings();
 
@@ -13484,47 +13484,24 @@ void CMainFrame::SetSubtitle(const SubtitleInput& subInput, bool bApplyDefStyle 
         CLSID clsid;
         subInput.pSubStream->GetClassID(&clsid);
 
-        if (clsid == __uuidof(CVobSubFile)) {
-            CVobSubFile* pVSF = (CVobSubFile*)(ISubStream*)subInput.pSubStream;
-
-            if (bApplyDefStyle) {
-                pVSF->SetAlignment(s.fOverridePlacement, s.nHorPos, s.nVerPos, 1, 1);
-            }
-        } else if (clsid == __uuidof(CVobSubStream)) {
-            CVobSubStream* pVSS = (CVobSubStream*)(ISubStream*)subInput.pSubStream;
-
-            if (bApplyDefStyle) {
-                pVSS->SetAlignment(s.fOverridePlacement, s.nHorPos, s.nVerPos, 1, 1);
+        if (clsid == __uuidof(CVobSubFile) || clsid == __uuidof(CVobSubStream)) {
+            if (auto pVSS = dynamic_cast<CVobSubSettings*>((ISubStream*)subInput.pSubStream)) {
+                pVSS->SetAlignment(s.fOverridePlacement, s.nHorPos, s.nVerPos);
             }
         } else if (clsid == __uuidof(CRenderedTextSubtitle)) {
             CRenderedTextSubtitle* pRTS = (CRenderedTextSubtitle*)(ISubStream*)subInput.pSubStream;
 
-            STSStyle style;
+            STSStyle style = s.subtitlesDefStyle;
 
-            if (bApplyDefStyle || pRTS->m_fUsingAutoGeneratedDefaultStyle) {
-                style = s.subtitlesDefStyle;
-
-                if (s.fOverridePlacement) {
-                    style.scrAlignment = 2;
-                    int w = pRTS->m_dstScreenSize.cx;
-                    int h = pRTS->m_dstScreenSize.cy;
-                    int mw = w - style.marginRect.left - style.marginRect.right;
-                    style.marginRect.bottom = h - MulDiv(h, s.nVerPos, 100);
-                    style.marginRect.left = MulDiv(w, s.nHorPos, 100) - mw / 2;
-                    style.marginRect.right = w - (style.marginRect.left + mw);
-                }
-
-                bool res = pRTS->SetDefaultStyle(style);
-                UNREFERENCED_PARAMETER(res);
-            }
-
-            if (pRTS->GetDefaultStyle(style) && style.relativeTo == 2) {
+            if (pRTS->m_fUsingAutoGeneratedDefaultStyle) {
+                pRTS->SetDefaultStyle(style);
+            } else if (pRTS->GetDefaultStyle(style) && style.relativeTo == 2 && s.subtitlesDefStyle.relativeTo != 2) {
                 style.relativeTo = s.subtitlesDefStyle.relativeTo;
                 pRTS->SetDefaultStyle(style);
             }
 
             pRTS->SetOverride(s.fUseDefaultSubtitlesStyle, &s.subtitlesDefStyle);
-
+            pRTS->SetAlignment(s.fOverridePlacement, s.nHorPos, s.nVerPos);
             pRTS->Deinit();
         } else if (clsid == __uuidof(CRLECodedSubtitle)) {
             CRLECodedSubtitle* pRHS = (CRLECodedSubtitle*)(ISubStream*)subInput.pSubStream;
@@ -16385,4 +16362,25 @@ bool CMainFrame::GetDecoderType(CString& type) const
         return true;
     }
     return false;
+}
+
+void CMainFrame::UpdateOverridePlacement()
+{
+    const CAppSettings& s = AfxGetAppSettings();
+    if (auto pRTS = dynamic_cast<CRenderedTextSubtitle*>((ISubStream*)m_pCurrentSubInput.pSubStream)) {
+        {
+            CAutoLock cAutoLock(&m_csSubLock);
+
+            pRTS->SetAlignment(s.fOverridePlacement, s.nHorPos, s.nVerPos);
+            pRTS->Deinit();
+        }
+        InvalidateSubtitle();
+    } else if (auto pVSS = dynamic_cast<CVobSubSettings*>((ISubStream*)m_pCurrentSubInput.pSubStream)) {
+        {
+            CAutoLock cAutoLock(&m_csSubLock);
+
+            pVSS->SetAlignment(s.fOverridePlacement, s.nHorPos, s.nVerPos);
+        }
+        InvalidateSubtitle();
+    }
 }
